# glauber

./: .gitignore  Cargo.toml  LICENSE  README.md  viz.ipynb
glauber/: Cargo.toml
glauber/examples/: color.rs  sample.rs
glauber/src/: atomic_rw.rs  color.rs  graph.rs  graphio.rs  lib.rs  scanner.rs  simsvm.rs
