[package]
name = "glauber"
version = "0.1.0"
authors = ["Vladimir Feinberg"]
edition = "2018"

[[example]]
name = "color"
path = "examples/color.rs"

[[example]]
name = "sample"
path = "examples/sample.rs"

[dependencies]
rayon = "1.3"
itertools = "0.9"
bstr = "0.2"
ordered-float = "1.0"
rand = "0.8.3"
rand_pcg = "0.3"
serde_json = "1.0"

[dev-dependencies]
structopt = "0.3"
byte-slice-cast = "1.0"
